# llm-red-teaming-toolkit

./: .gitignore  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  reagent.yaml  test_custom_case.yaml
examples/: ecommerce_bot.yaml  my_agent.py
redteam_corpus/: README.md
redteam_corpus/excessive_agency/: fake-tool-call-002.yaml  tool_output_fuzzing_base64.yaml
redteam_corpus/llm01_prompt_injection/: context-doc-005.yaml  io-direct-override-002.yaml  io-translator-001.yaml  roleplay-dan-003.yaml
redteam_corpus/llm02_sensitive_info/: pii-summarize-001.yaml
redteam_corpus/llm05_improper_output/: sql-injection-002.yaml  xss-script-001.yaml
redteam_corpus/llm06_excessive_agency/: unauthorized-action-001.yaml
redteam_corpus/llm07_system_prompt/: completion-trap-004.yaml  repeat-verbatim-002.yaml  translate-trick-003.yaml
redteam_corpus/llm09_misinformation/: fake-citation-001.yaml  hallucinated-api-003.yaml
redteam_corpus/misinformation_elicitation/: historical-revisionism-002.yaml
redteam_corpus/owasp_top10/llm01_prompt_injection/: llm01-obfuscation-rot13.yaml  policy-puppetry-006.yaml
redteam_corpus/owasp_top10/llm03_dependency_hijack/: llm03-dependency-hijack.yaml
redteam_corpus/owasp_top10/llm07_system_prompt/: direct-ask-001.yaml  llm07-translate-trick-french.yaml
redteam_corpus/owasp_top10/llm10_unbounded_consumption/: llm10-unbounded-recursion.yaml
redteam_corpus/prompt_injection/: context-doc-005.yaml  encoding-base64-004.yaml
redteam_corpus/sensitive_info_disclosure/: credentials-elicit-002.yaml  training-data-extract-003.yaml
src/reagent/: __init__.py  cli.py  models.py  paths.py  stats.py
src/reagent/adapters/: __init__.py  base.py  exec.py  ollama.py  registry.py
src/reagent/assertions/: __init__.py  base.py  contains.py  llm_judge.py  refusal.py  regex.py
src/reagent/reporters/: __init__.py  html.py  json_reporter.py  markdown.py
src/reagent/runner/: __init__.py  cache.py  runner.py  scoring.py
src/reagent/suites/: __init__.py  loader.py
tests/: conftest.py  test_assertions.py  test_compliance_scoring.py  test_corpus_validates.py  test_reporters.py  test_runner_integration.py  test_scoring.py  test_stats.py  test_suite_loader.py
