[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "reagent-eval"
version = "0.1.0"
description = "Open-source LLM evaluation and red-teaming toolkit with statistically rigorous regression diffs."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Reagent maintainers" }]
keywords = ["llm", "evaluation", "red-team", "security", "ai-safety", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
    "click>=8.1,<9",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyright>=1.1.350",
]

[project.scripts]
reagent = "reagent.cli:main"

[project.entry-points."reagent.adapters"]
ollama = "reagent.adapters.ollama:OllamaAdapter"

[project.entry-points."reagent.assertions"]
regex = "reagent.assertions.regex:RegexAssertion"
contains_any = "reagent.assertions.contains:ContainsAnyAssertion"
not_contains = "reagent.assertions.contains:NotContainsAssertion"
refusal = "reagent.assertions.refusal:RefusalAssertion"
llm_judge = "reagent.assertions.llm_judge:LLMJudgeAssertion"

[project.urls]
Homepage = "https://github.com/reagent-eval/reagent"
Documentation = "https://github.com/reagent-eval/reagent#readme"
Issues = "https://github.com/reagent-eval/reagent/issues"
Source = "https://github.com/reagent-eval/reagent"

[tool.hatch.build.targets.wheel]
packages = ["src/reagent"]

[tool.hatch.build.targets.wheel.force-include]
"redteam_corpus" = "reagent/_bundled_corpus"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
